--- a/index.html
+++ b/index.html
@@ -105,12 +105,12 @@
             <div class="card">
                 <h3>Pribadi & Data Diri</h3>
                 <p>Temukan lebih banyak tentang saya, pengalaman, dan proyek-proyek yang telah saya kerjakan.</p>
-                <a href="/pribadi/index.html" class="card-link">Read More</a>
+                <a href="./pribadi/index.html" class="card-link">Read More</a>
             </div>
             <div class="card">
                 <h3>Berita Terbaru</h3>
                 <p>Dapatkan berita terbaru tentang teknologi, desain, dan tren industri yang relevan dengan dunia saya.</p>
-                <a href="/blog/index.html" class="card-link">Read More</a>
+                <a href="./blog/index.html" class="card-link">Read More</a>
             </div>
         </div>
     </section>
