--- a/index.html
+++ b/index.html
@@ -94,6 +94,11 @@
                 <p>Pembuatan landing page digital consulting</p>
                 <button><a href="">Learn More</a></button>
             </div>
+            <div class="card">
+                <h3>Project 4</h3>
+                <p>Pembuatan landing page portofolio desain grafis</p>
+                <button><a href="https://dwinanta.github.io/portofolio/desaingrafis/">Learn More</a></button>
+            </div>
             <!-- More cards -->
         </div>
     </section>
