--- a/desaingrafis/index.html
+++ b/desaingrafis/index.html
@@ -261,15 +261,27 @@
 
     <!-- Contact Section -->
     <section class="contact" id="contact">
-        <h2>Contact Me</h2>
-        <form class="contact-form">
-            <input type="text" placeholder="Your Name" required>
-            <input type="email" placeholder="Your Email" required>
-            <textarea placeholder="Your Message" required></textarea>
-            <button type="submit">Send Message</button>
-        </form>
-    </section>
+    <h2>Contact Me</h2>
+    <form class="contact-form" onsubmit="sendToWhatsApp(); return false;">
+        <input type="text" id="name" placeholder="Your Name" required>
+        <input type="email" id="email" placeholder="Your Email" required>
+        <textarea id="message" placeholder="Your Message" required></textarea>
+        <button type="submit">Send Message</button>
+    </form>
+</section>
+<script>
+    function sendToWhatsApp() {
+        var name = document.getElementById("name").value;
+        var email = document.getElementById("email").value;
+        var message = document.getElementById("message").value;
 
+        var whatsappNumber = "085645230774"; // Ganti dengan nomor WhatsApp Anda
+        var text = `Hello, my name is ${name}.\nEmail: ${email}\nMessage: ${message}`;
+
+        var url = `https://wa.me/${+6285732259281}?text=${encodeURIComponent(text)}`;
+        window.open(url, '_blank');
+    }
+</script>
     <!-- Footer -->
     <footer>
         <p>&copy; 2024 Your Name | All Rights Reserved</p>
