--- a/desaingrafis/index.html
+++ b/desaingrafis/index.html
@@ -284,7 +284,7 @@
 </script>
     <!-- Footer -->
     <footer>
-        <p>&copy; 2024 Your Name | All Rights Reserved</p>
+        <p>&copy; 2024 Dwinanta | All Rights Reserved</p>
     </footer>
 
 </body>
